fix: fix the app and the fluent layout styles

--- a/src/layout/FluentLayout/index.css
+++ b/src/layout/FluentLayout/index.css
@@ -1,4 +1,7 @@
 .fluent-layout__fluent-provider {
+    @apply w-full !important;
+    @apply h-full !important;
+
     @apply flex !important;
     @apply flex-col !important;
     @apply flex-wrap !important;
