--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+    @apply w-screen !important;
+    @apply h-screen !important;
+}
