feat: add centering to the language selector

--- a/src/components/LanguageSelector/index.css
+++ b/src/components/LanguageSelector/index.css
@@ -2,4 +2,6 @@
     @apply flex !important;
     @apply flex-col !important;
     @apply flex-nowrap !important;
+    @apply items-center !important;
+    @apply justify-center !important;
 }
