--- a/src/components/LanguageSelector/index.css
+++ b/src/components/LanguageSelector/index.css
@@ -4,4 +4,5 @@
     @apply flex-nowrap !important;
     @apply items-center !important;
     @apply justify-center !important;
+    @apply gap-2 !important;
 }
