--- a/src/app/index.css
+++ b/src/app/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
 #root {
     @apply w-screen !important;
     @apply h-screen !important;
