fix: fix the fluent layout styles

--- a/src/layout/FluentLayout/index.css
+++ b/src/layout/FluentLayout/index.css
@@ -7,4 +7,6 @@
     @apply flex-nowrap !important;
     @apply items-center !important;
     @apply justify-center !important;
+
+    @apply my-4 !important;
 }
