--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -4,6 +4,7 @@
     @apply flex-nowrap !important;
     @apply items-center !important;
     @apply justify-center !important;
+    @apply gap-4 !important;
 }
 
 .homepage__main {
