--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -13,6 +13,7 @@
     @apply flex-nowrap !important;
     @apply items-center !important;
     @apply justify-center !important;
+    @apply gap-4 !important;
 
     @apply mt-4 !important;
 }
