fix: fix the homepage styles

--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -5,6 +5,8 @@
     @apply items-center !important;
     @apply justify-center !important;
     @apply gap-4 !important;
+
+    @apply w-11/12 !important;
 }
 
 .homepage__main {
@@ -15,6 +17,8 @@
     @apply justify-center !important;
     @apply gap-4 !important;
 
+    @apply w-11/12 !important;
+
     @apply mt-4 !important;
 }
 
@@ -24,6 +28,8 @@
     @apply flex-nowrap !important;
     @apply items-center !important;
     @apply justify-center !important;
+
+    @apply w-11/12 !important;
 
     @apply mt-4 !important;
 }
